feat: initial typescript template

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Sustentinta",
-    "slug": "sustentinta",
+    "name": "sustentinta-app",
+    "slug": "sustentinta-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
