--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@types/styled-components": "^5.1.34",
+    "@types/styled-components-react-native": "^5.2.5",
     "typescript": "^5.1.3"
   },
   "overrides": {
