--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inria-sans": "^0.2.3",
     "@expo/webpack-config": "~19.0.1",
     "expo": "^50.0.3",
     "expo-constants": "~15.4.5",
+    "expo-font": "~11.10.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.5",
     "expo-status-bar": "~1.11.1",
@@ -22,7 +24,8 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "expo-splash-screen": "~0.26.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
