fix: change app name

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Sustentinta",
+    "name": "SustenTinta",
     "slug": "sustentinta",
     "scheme": "sustentinta",
     "version": "1.0.0",
