--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint .",
     "format": "prettier --write .",
+    "lint": "eslint .",
     "lint:fix": "eslint --fix .",
+    "lint-staged": "lint-staged --config lint-staged.js",
+    "husky-install": "husky install",
     "generate-client": "openapi --input https://sustentinta.up.railway.app/openapi.json --output ./api -c axios --name AppClient"
   },
   "dependencies": {
@@ -21,6 +23,7 @@
     "expo-font": "~11.10.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.6",
+    "expo-secure-store": "~12.8.1",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
@@ -30,8 +33,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
-    "styled-components": "^5.3.3",
-    "expo-secure-store": "~12.8.1"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -40,8 +42,11 @@
     "@types/styled-components-react-native": "^5.2.5",
     "eslint": "^8.56.0",
     "eslint-config-universe": "^12.0.0",
+    "husky": "^9.0.7",
+    "lint-staged": "^15.2.1",
     "openapi-typescript-codegen": "^0.27.0",
     "prettier": "^3.2.4",
+    "tsc-files": "^1.1.4",
     "typescript": "^5.1.3"
   },
   "overrides": {
