--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   },
   "private": true,
   "lint-staged": {
-    "*.ts": [
+    "*.ts,*.tsx": [
       "prettier --write",
       "eslint --fix"
     ]
