--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint-staged": "lint-staged",
     "husky-install": "husky install",
     "generate-client": "openapi --input https://sustentinta.up.railway.app/openapi.json --output ./api -c axios --name AppClient",
-    "prepare": "husky"
+    "prepare": "husky",
+    "web-build": "expo export -p web"
   },
   "dependencies": {
     "@expo-google-fonts/inria-sans": "^0.2.3",
