feat: add gh-pages

--- a/app.json
+++ b/app.json
@@ -29,6 +29,9 @@
       "bundler": "metro",
       "output": "single"
     },
+    "experiments": {
+      "baseUrl": "/app"
+    },
     "plugins": [
       "expo-router",
       "expo-font",
