--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "husky-install": "husky install",
     "generate-client": "openapi --input https://sustentinta.up.railway.app/openapi.json --output ./api -c axios --name AppClient",
     "prepare": "husky",
-    "web-build": "expo export -p web"
+    "web-build": "expo export -p web",
+    "predeploy": "expo export -p web",
+    "deploy": "gh-pages -t -d dist"
   },
   "dependencies": {
     "@expo-google-fonts/inria-sans": "^0.2.3",
@@ -44,6 +46,7 @@
     "@types/styled-components-react-native": "^5.2.5",
     "eslint": "^8.56.0",
     "eslint-config-universe": "^12.0.0",
+    "gh-pages": "^6.1.1",
     "husky": "^9.0.7",
     "lint-staged": "^15.2.1",
     "openapi-typescript-codegen": "^0.27.0",
