--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ permissions:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    concurrency: ci-${{ github.ref }}
     steps:
       - uses: actions/checkout@v3
 
