feat: rename project

--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "SustenTinta",
-    "slug": "sustentinta",
-    "scheme": "sustentinta",
+    "name": "SustenTerra",
+    "slug": "sustenterra",
+    "scheme": "sustenterra",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
