--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
     "@expo-google-fonts/inria-sans": "^0.2.3",
     "@expo/webpack-config": "~19.0.1",
     "axios": "^1.6.7",
-    "expo": "^50.0.4",
+    "expo": "~50.0.6",
     "expo-constants": "~15.4.5",
     "expo-font": "~11.10.2",
     "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.6",
+    "expo-router": "~3.4.7",
     "expo-secure-store": "~12.8.1",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
