--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sustentinta-app",
+  "name": "sustenterra-app",
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
