--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/inria-sans": "^0.2.3",
+    "@expo/react-native-action-sheet": "^4.0.1",
     "@expo/webpack-config": "~19.0.1",
     "axios": "^1.6.7",
     "expo": "~50.0.6",
