feat: update manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "short_name": "SustenTinta",
-  "name": "SustenTinta",
-  "description": "Explore tudo que a Geotinta tem a oferecer.",
+  "short_name": "SustenTerra",
+  "name": "SustenTerra",
+  "description": "Explore tudo que o Solo tem a oferecer.",
   "icons": [
     {
       "src": "favicon.ico",
