--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
+    "react-native-web-webview": "^1.0.2",
+    "react-native-webview": "13.6.4",
+    "react-native-youtube-iframe": "^2.3.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
