--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
     "react-native-flash-message": "^0.4.2",
+    "react-native-floating-action": "^1.22.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-markdown-display": "^7.0.2",
     "react-native-safe-area-context": "4.8.2",
