--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-native-web-webview": "^1.0.2",
     "react-native-webview": "13.6.4",
     "react-native-youtube-iframe": "^2.3.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "expo-document-picker": "~11.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
