--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@expo-google-fonts/inria-sans": "^0.2.3",
     "@expo/react-native-action-sheet": "^4.0.1",
     "@expo/webpack-config": "~19.0.1",
+    "@react-native-picker/picker": "^2.6.1",
     "awesome-debounce-promise": "^2.1.0",
     "axios": "^1.6.7",
     "expo": "~50.0.6",
     "expo-constants": "~15.4.5",
     "expo-font": "~11.10.2",
+    "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.7",
     "expo-secure-store": "~12.8.1",
@@ -43,8 +45,7 @@
     "react-native-web-webview": "^1.0.2",
     "react-native-webview": "13.6.4",
     "react-native-youtube-iframe": "^2.3.0",
-    "styled-components": "^5.3.3",
-    "expo-document-picker": "~11.10.1"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
