--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@expo-google-fonts/inria-sans": "^0.2.3",
     "@expo/react-native-action-sheet": "^4.0.1",
     "@expo/webpack-config": "~19.0.1",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-picker/picker": "^2.6.1",
     "awesome-debounce-promise": "^2.1.0",
     "axios": "^1.6.7",
@@ -28,6 +29,7 @@
     "expo-font": "~11.10.2",
     "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.2",
+    "expo-network": "~5.8.0",
     "expo-router": "~3.4.7",
     "expo-secure-store": "~12.8.1",
     "expo-sharing": "~11.10.0",
@@ -49,15 +51,14 @@
     "react-native-web-webview": "^1.0.2",
     "react-native-webview": "13.6.4",
     "react-native-youtube-iframe": "^2.3.0",
-    "styled-components": "^5.3.3",
-    "expo-network": "~5.8.0",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@types/styled-components": "^5.1.34",
     "@types/styled-components-react-native": "^5.2.5",
+    "cypress": "^13.6.6",
     "eslint": "^8.56.0",
     "eslint-config-universe": "^12.0.0",
     "husky": "^9.0.7",
