--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:fix": "eslint --fix .",
     "lint-staged": "lint-staged",
     "husky-install": "husky install",
-    "generate-client": "openapi --input https://sustentinta.up.railway.app/openapi.json --output ./api -c axios --name AppClient",
+    "generate-client": "openapi --input https://backend-staging-production-d239.up.railway.app/openapi.json --output ./api -c axios --name AppClient",
     "prepare": "husky",
     "web-build": "expo export -p web"
   },
