--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-markdown-display": "^7.0.2",
     "react-native-mask-input": "^1.2.3",
     "react-native-mask-text": "^0.14.2",
+    "react-native-picker-select": "^9.1.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
