feat: add env vars for each build

--- a/eas.json
+++ b/eas.json
@@ -8,9 +8,16 @@
       "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "EXPO_PUBLIC_API_URL": "https://backend-staging-production-d239.up.railway.app"
+      }
     },
-    "production": {}
+    "production": {
+      "env": {
+        "EXPO_PUBLIC_API_URL": "https://backend-production-2fb4.up.railway.app"
+      }
+    }
   },
   "submit": {
     "production": {}
