--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "react-native-web-webview": "^1.0.2",
     "react-native-webview": "13.6.4",
     "react-native-youtube-iframe": "^2.3.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "expo-web-browser": "~12.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
